--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "autoprefixer": "^10.4.12",
     "clsx": "^1.2.1",
     "focus-visible": "^5.2.0",
+    "postcss": "8.4",
     "postcss-focus-visible": "^6.0.4",
     "postcss-import": "^14.1.0",
     "prismjs": "^1.29.0",
-    "tailwindcss": "^3.2.1"
+    "tailwindcss": "^3.2.1",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "eslint": "8.26.0",
