Add pages script

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite dev",
     "purs": "spago build --watch",
-    "build": "spago build && vite build"
+    "build": "spago build && vite build",
+    "pages": "gh-pages -d dist"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
