--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite dev",
     "purs": "spago build --watch",
     "build": "spago build && vite build",
-    "pages": "spago build && gh-pages -d dist"
+    "preview": "vite preview",
+    "pages": "pnpm build && gh-pages -d dist"
   },
   "browserslist": "defaults, not ie <= 11",
   "dependencies": {
